Crowns Point Type/objects/FieloPLT__ChallengeReward__c.object
<CustomObject>
    <fields>
        <fullName>Crown_Conversion_Mode__c</fullName>
        <label>Crown Conversion Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crown_Conversion_Value__c</fullName>
        <label>Crown Conversion Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crown_Expiration_Date__c</fullName>
        <label>Crown Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Crown_Expiration_Mode__c</fullName>
        <label>Crown Expiration Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crown_Field_Name__c</fullName>
        <label>Crown Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crown_Reflection__c</fullName>
        <label>Crown Reflection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crown_months_until_expiration__c</fullName>
        <label>Crown months until expiration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>